@@ -1,5 +1,13 @@
 2008-03-22  Brian Warner  <warner@lothar.com>
 
+	* buildbot/test/test_vc.py (Mercurial.serveHTTP): wait for the 'hg
+	serve' command to be ready, by polling with twisted.web's
+	client.getPage . Unfortunately mercurial doesn't flush its stdout
+	at startup, so we can't just wait for the 'listening at..' line to
+	be printed. This should fix the sporadic "connection refused" test
+	failures I've seen on the metabuildbot when the buildslave is
+	overloaded and 'hg serve' takes a while to start up.
+
 	* buildbot/steps/python_twisted.py (TrialTestCaseCounter): modify
 	regexp to count "Doctest:" lines as well as normal tests. Thanks to
 	Martin Geisler for the patch. Closes #196.
